# synology-guru

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: nas.yaml.example
src/: __init__.py
src/agents/: __init__.py  base.py  learning.py
src/agents/backup/: agent.py
src/agents/disks/: agent.py
src/agents/logs/: agent.py
src/agents/security/: agent.py
src/agents/storage/: agent.py
src/agents/updates/: agent.py
src/api/: __init__.py  client.py
src/config/: __init__.py  loader.py  models.py
src/memory/: __init__.py  models.py  store.py
src/notifications/: __init__.py  email.py
src/orchestrator/: __init__.py  main.py  orchestrator.py  report.py
tests/: conftest.py  test_agent_backup.py  test_agent_disks.py  test_agent_logs.py  test_agent_security.py  test_agent_storage.py  test_agent_updates.py  test_agents_base.py  test_agents_learning.py  test_config.py  test_memory_models.py  test_memory_store.py  test_orchestrator.py
